--- a/230/my restaurant part2.html
+++ b/230/my restaurant part2.html
@@ -43,15 +43,15 @@
           </label>
 
       </div>
-      <div class="file">Upload the certification of your restaurant (Click here)
-          <input type="file">
-      </div>
       <div class="file">Upload the video and pictures of your restaurant (Click here)
           <input type="file">
       </div>
+      <div class="file">
+          <a href=https://docs.google.com/forms/d/e/1FAIpQLSdnpoBhyzOYLJY-KvBNcNWgXHc-LLKoqGP-8LxliIvIJ2DVdg/viewform?embedded=true" target="_blank">Fill the questionaire (Click here) </a>
+      </div>
 
       <div class="button">
-          <a href="my%20restaurant%20part3.html">
+          <a href="my%20restaurant%20part3.html" >
               <button class="nextButton"  type="submit" >SUBMIT</button>
           </a>
       </div>
